samples/_failures_safe/1761353813_4bd779_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6137e0bc.c: In function ‘main’:
./samples/SAFE/__tmp_6137e0bc.c:149:17: error: expected declaration or statement at end of input
  149 |                 buffer_free(&decompressed);
      |                 ^~~~~~~~~~~
./samples/SAFE/__tmp_6137e0bc.c:149:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6137e0bc.c:149:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6137e0bc.c:149:17: error: expected declaration or statement at end of input
